# milkshmimview

./: README.md
_install/include/ImageStreamIO/: ImageStreamIO.h  ImageStreamIOError.h  ImageStruct.h
_install/lib/cmake/: ImageStreamIOConfig.cmake  ImageStreamIOConfigVersion.cmake  ImageStreamIOTargets-noconfig.cmake  ImageStreamIOTargets.cmake
_install/lib/pkgconfig/: ImageStreamIO.pc
viewer/: CMakeLists.txt
viewer/src/: earth_stream.c  main.c
